--- a/views/index.ejs
+++ b/views/index.ejs
@@ -64,6 +64,6 @@
     <footer>
         &copy; Todos os direitos reservados a mim.
     </footer>
-    <script src="/js/script.js"></script>
+    <script src="/js/home.js"></script>
 </body>
 </html>
