--- a/views/details.ejs
+++ b/views/details.ejs
@@ -34,6 +34,6 @@
        </ul>
        <% }); %>
     </main>
-<script src="/js/script.js"></script>
+<script src="/js/details.js"></script>
 </body>
 </html>
