--- a/views/cadastro.ejs
+++ b/views/cadastro.ejs
@@ -19,7 +19,7 @@
         <h1>CADASTRO</h1>
     </header>
     <main>
-        <form id="dados" action="/details" method="POST">
+        <form id="dados" action="./details" method="POST">
             <label for="imagem"><p>IMAGEM</p></label>
             <article>
                 <input type="text" id= "imagem" name="imagem" placeholder="URL DA IMAGEM">
