--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,61 +9,53 @@
     <title>Pokeagenda</title>
 </head>
 <body>
-    <header>
-    
-    </header>
-        <main>
-            <section>
-                <img id="pok" src="/img/pokemon.png">    
-            </section>
-          <section id="pokedex">
-            <section class="sensor">
-              <button id="sensor"></button>
-            </section>
-            <section class="camera-display">
-                <img id="pokemon" src="img/charmander.jpg">
-            </section>
-            <section class="divider"></section>
-            <section class="stats-display">
-              <h2 id="name">Charmander</h2>
-            <!-- <section id="n">
-              <h5>Num: </h2><div id="num"> 001 </div>
-            </section> -->
-            <h3>Descrição</h3>
-                <li>TIPO:</li><p id="tipo">Fogo </p>
-              </ul>
-            </section>
-            <section class="botom-actions">
-              <section id="actions">
-                <button class="a"><a href="./detail">LISTA</a></button>
-              </section>
-              <section id="cross">
-                <button class="cross-button up"></button>
-                <button id="right" class="cross-button right"></button>
-                <button class="cross-button down"></button>
-                <button id="left" class="cross-button left"></button>
-                <section class="cross-button center"> </section>
-              </section>
-            </section>
-            <!-- <section class="input-pad"><input /></section> -->
+  <main>
+    <section>
+      <img id="pok" src="/img/pokemon.png">    
+    </section>
+
+    <section id="pokedex">
+      <section class="sensor">
+        <button id="sensor"></button>
+      </section>
+      <section class="camera-display">
+        <img id="pokemon" src="img/charmander.jpg">
+      </section>
+    <section class="divider"></section>
+      <section class="stats-display">
+        <h2 id="name">Charmander</h2>
+        <h3>Descrição</h3>
+          <p>TIPO:</p>
+          <p id="tipo">Fogo </p>
+      </section>
+      <section class="botom-actions">
+        <section id="actions">
+          <button class="a"><a href="./detail">LISTA</a></button>
+        </section>
+        <section id="cross">
+          <button class="cross-button up"></button>
+          <button id="right" class="cross-button right"></button>
+          <button class="cross-button down"></button>
+          <button id="left" class="cross-button left"></button>
+          <section class="cross-button center"> </section>
+        </section>
+      </section>
+
+      <section class="bottom-modes">
+        <button class="level-button" id="foto"></button>
+        <button class="level-button" id="evo1">EVO 1</button>
+        <button class="level-button" id="evo2">EVO 2</button>
+        <button class="level-button" id="evo3">EVO 3</button>
+              
+        <button class="pokedex-mode black-button"><a href="./">HOME</a></button>
+        <button class="game-mode black-button"><a href="./cadastro">CADASTRAR</a></button>        
+      </section>
           
-            <section class="bottom-modes">
-              
-                <button class="level-button" id="foto"></button>
-                <button class="level-button" id="evo1">EVO 1</button>
-                <button class="level-button" id="evo2">EVO 2</button>
-                <button class="level-button" id="evo3">EVO 3</button>
-              
-                <button class="pokedex-mode black-button"><a href="./">HOME</a></button>
-                <button class="game-mode black-button"><a href="./cadastro">CADASTRAR</a></button>
-              
-            </section>
-          
-          </section>
-        </main>
-    <footer>
-        &copy; Todos os direitos reservados a mim.
-    </footer>
-    <script src="/js/home.js"></script>
+    </section>
+  </main>
+  <footer>
+    &copy; Todos os direitos reservados a mim.
+  </footer>
+<script src="/js/home.js"></script>
 </body>
 </html>
